--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   "author": "GuiFerreira",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.18.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-react-easy": "^0.1.9",
     "gulp-rename": "^1.2.2",
     "react": "^15.4.0",
     "react-dom": "^15.4.0"
+  },
+  "dependencies": {
+    "express": "^4.16.4"
   }
 }
